--- a/static/css/main.css
+++ b/static/css/main.css
@@ -415,3 +415,10 @@
     font-size: 1rem;
 }
 
+.pbf{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
