--- a/neighbourhoodx/templates/neighbourhoodx/add_business.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_business.html
@@ -9,7 +9,7 @@
     <div class="container res-form" style="max-width: 60rem; ">
         {{form.media}}
         <div class="container">
-            <h1>Add Social Services</h1>
+            <h1>Add Business</h1>
             <form action="" method="post">
                 {%csrf_token%}
                 {% bootstrap_form form %}
