--- a/neighbourhoodx/templates/neighbourhoodx/residents_res.html
+++ b/neighbourhoodx/templates/neighbourhoodx/residents_res.html
@@ -5,6 +5,37 @@
 
 {% block content %}
 {% include 'res_nav.html' %}
+<style>
+    .card {
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+        padding: 1rem !important
+    }
+
+    .top-container {
+        display: flex;
+        align-items: center
+    }
+
+    .profile-image {
+        border-radius: 10px;
+        border: 2px solid black;
+    }
+
+    .name {
+        font-weight: bold;
+        color: #272727;
+        position: relative;
+        top: 8px;
+    }
+
+    .mail {
+        color: grey;
+        position: relative;
+        top: 2px;
+    }
+</style>
 <div class="ssx">
     <div class="container-fluid">
         <h1 class="text-center p-1"><strong>{{hood.name}} </strong> Neighbourhood</h1>
@@ -14,20 +45,14 @@
         <h3 class="text-center p-1"><strong>Occupants: {{hood.occupants}}(count includes Administrator)</strong></h3>
         <div class="row res-form ssxx">
             {% for resident in residents %}
-            <div class="col">
-                <div class="card bg-black mb-1 brt" style="max-width: 12rem;">
-                    <div class="card-body">
-                        <a class="f-right text-decoration-none text-white" href="{% url 'delete-resident' resident.id %}"><i class="fa fa-times"
-                                aria-hidden="true"></i></a>
-                        <p>
-                            {% if resident.profile_photo %}
-                            <img src="{{resident.profile_photo.url}}" alt="" class="rounded-circle" style="width:9rem">
-                            {% else %}
-                            <img src="{% static 'images/avatar.jpg' %}" alt="" class="rounded-circle"
-                                style="width: 9rem">
-                            {%endif%}
-                        </p>
-                        <p class="card-text">Username: <strong>{{resident.user.username}}</strong></p>
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="top-container"> <img src="{{resident.profile_photo.url}}"
+                            class="img-fluid profile-image" width="70">
+                    </div>
+                    <div class="">
+                        <h5 class="name">{{resident.user.username}}</h5>
+                        <p class="mail">{{resident.user.email}}</p>
                     </div>
                 </div>
             </div>
