--- a/neighbourhoodx/templates/neighbourhoodx/profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/profile.html
@@ -90,8 +90,8 @@
         <div class="card p-4">
             <div class=" image d-flex flex-column justify-content-center align-items-center">
                 <button class="btn btn-secondary">
-                    {% if profile.profile_photo %}
-                    <img src="{{profile.profile_photo.url}}" height="100" width="100"
+                    {% if resident.profile_photo %}
+                    <img src="{{resident.profile_photo.url}}" height="100" width="100"
                         class="rounded-circle img-thumbnail" />
                     {% else %}
                     <img src="{% static 'images/avatar.jpg' %}" height="100" width="100"
