--- a/neighbourhoodx/templates/neighbourhoodx/add_post_res.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_post_res.html
@@ -6,6 +6,7 @@
 {% include 'res_nav.html' %}
 <div class="servicesx">
     <div class="container res-form" style="max-width: 30rem; ">
+        {{form.media}}
         <div class="container">
             <h1>Add Post</h1>
             <p>Enter Your Message in the space below ...</p>
