--- a/neighbourhoodx/templates/neighbourhoodx/add_resident.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_resident.html
@@ -3,16 +3,19 @@
 
 {% block content %}
 {% include 'admin_nav.html' %}
-<div class="resx">
-    <div class="container res-form" style="max-width: 30rem; ">
-        <h1>Add resident to the neighbourhood</h1>
-        <form action="" method="post">
-            {%csrf_token%}
-            {% bootstrap_form form %}
-            <p class="text-center">
-            <input type="submit" class="btn btn--main" value="Add Resident">
-            </p>
-        </form>
+<div class="servicesx">
+    <div class="container res-form" style="max-width: 50rem; ">
+        {{form.media}}
+        <div class="container">
+            <h1>Add Resident</h1>
+            <form action="" method="post">
+                {%csrf_token%}
+                {% bootstrap_form form %}
+                <p class="text-center">
+                    <input type="submit" class="btn btn--main" value="Add Centre">
+                </p>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock content %}
