--- a/neighbourhoodx/templates/neighbourhoodx/admin_profile_form.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_profile_form.html
@@ -2,7 +2,7 @@
 {% load bootstrap5 %}
 
 {% block content %}
-<main class="update-account layout">
+<div class="resx">
     <div class="container" id="wrapper">
         <div class="layout__box__x">
             <div class="layout__boxHeader">
@@ -16,21 +16,16 @@
                             </path>
                         </svg>
                     </a>
-                    <h3>Edit your profile</h3>
+                    <h5>Add Profile Photo</h5>
                 </div>
             </div>
             <div class="layout__body">
-                
-                {% if request.user.profile.profile_photo.url %}
-                <img src="{{request.user.profile.profile_photo.url}}" alt="" style="width: 10%;">
-                {% endif %}
-                    
-                <form class="form" action="" method="post" enctype="multipart/form-data">
+                <form class="form res-form" action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     <div class="form__action">
                         <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
-                        <button class="btn btn--main" type="submit">Update</button>
+                        <button class="btn btn--dark" type="submit">Update</button>
                     </div>
                 </form>
             </div>
