--- a/neighbourhoodx/templates/neighbourhoodx/login_register.html
+++ b/neighbourhoodx/templates/neighbourhoodx/login_register.html
@@ -4,6 +4,7 @@
 {% load bootstrap5 %}
 
 <div class="container-fluid bgx">
+
     {% if page == 'login' %}
 
     <div class="l-gx" style="max-width:30rem;">
@@ -23,6 +24,9 @@
                             <input type="password" name="password" id="" placeholder="Enter password" required>
 
                         </div>
+                        {% for message in messages %}
+                        <li class="text-white">{{message}}</li>
+                        {% endfor %}
                     </div>
                     <p class="text-center">
                         <input type="submit" value="Login" class="btn btn--main sl" style="width: max-content;">
@@ -42,7 +46,7 @@
     </div>
 
     {% else %}
-    
+
     <div class="l-gx" style="max-width:30rem;">
         <div class="container">
             <div class="form-data">
@@ -56,10 +60,13 @@
                             {{field}}
                         </div>
                         {% endfor %}
+                        {% for message in messages %}
+                        <li class="text-danger bg-white p-1 text-center">{{message}}</li>
+                        {% endfor %}
 
                     </div>
                     <p class="text-center">
-                        <button type="submit" class="btn pcv" style="width: max-content;">
+                        <button type="submit" class="btn sd" style="width: max-content;">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                                 viewBox="0 0 32 32">
                                 <title>lock</title>
