--- a/static/css/main.css
+++ b/static/css/main.css
@@ -374,7 +374,7 @@
     box-shadow: 0px 0px 4px rgb(211, 252, 255);
 }
 .btn>svg {
-    fill: white;
+    fill: black;
     width: 1.6rem;
     height: 1.6rem;
 }
