--- a/neighbourhoodx/templates/neighbourhoodx/residents_res.html
+++ b/neighbourhoodx/templates/neighbourhoodx/residents_res.html
@@ -40,7 +40,7 @@
         <h3 class="text-center p-1"><strong>Occupants: {{hood.occupants}}(count includes Administrator)</strong></h3>
         <div class="row res-form ssxx">
             {% for resident in residents %}
-            <div class="col-md-3">
+            <div class="col-md-3 mb-2">
                 <div class="card">
                     <div class="top-container">
                         {% if resident.profile_photo %}
