--- a/neighbourhoodx/templates/neighbourhoodx/add_resident.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_resident.html
@@ -12,7 +12,7 @@
                 {%csrf_token%}
                 {% bootstrap_form form %}
                 <p class="text-center">
-                    <input type="submit" class="btn btn--main" value="Add Centre">
+                    <input type="submit" class="btn btn--main" value="Add Resident">
                 </p>
             </form>
         </div>
