--- a/templates/res_nav.html
+++ b/templates/res_nav.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search for ..." aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="resident name . . ." name="q"aria-label="Search">
                     <button class="btn btn--dark" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
