--- a/templates/res_nav.html
+++ b/templates/res_nav.html
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-tr">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="resident name . . ." name="q"aria-label="Search">
                     <button class="btn btn--dark" type="submit">Search</button>
@@ -20,7 +20,13 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        More options
+                        {% if request.user.member.profile_photo %}
+                        <img src=" {{ request.user.member.profile_photo.url}}" class="rounded-circle z-depth-0" style="max-width:100%;
+                            max-height:100%;">
+                        {% else %}
+                        <i class="fa fa-user-circle"></i>
+                        {%endif%}
+                        More Options
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'view-other-residents' %}">view Residents</a></li>
