add time joined

--- a/neighbourhoodx/templates/neighbourhoodx/profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/profile.html
@@ -114,7 +114,7 @@
                             class="fa-brands fa-facebook-f"></i></span> <span><i
                             class="fa-brands fa-instagram"></i></span> <span><i
                             class="fa-brands fa-linkedin"></i></span> </div>
-                <div class=" px-2 rounded mt-4 mb-2 date "> <span class="join">Joined May,2021 </span> </div>
+                <div class=" px-2 rounded mt-4 mb-2 date "> <span class="join">Joined <strong>{{resident.joined | date}}</strong> </span> </div>
                 <a href="{% url 'home' %}" class=" btn btn--main "> User-Dashboard </a>
             </div>
         </div>
