--- a/neighbourhoodx/templates/neighbourhoodx/edit_profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/edit_profile.html
@@ -1,63 +1,63 @@
 {% extends 'main.html' %}
 {% load bootstrap5 %}
+{% load static %}
 
 {% block content %}
-<div class="container-fluid bgx">
-    {% if user_form.errors %}
-    <div class="alert alert-danger alert-dismissible" role="alert">
-        <div id="form_errors">
-            {% for key, value in user_form.errors.items %}
-            <strong>{{ value }}</strong>
-            {% endfor %}
-        </div>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endif %}
-    <div class="l-gx" style="max-width:30rem;">
-        <div class="container">
-            <div class="form-data">
-                <form action="" method="post" class="fm ressx">
-                    {% csrf_token %}
-                    <div class="dix">
-                        <div class="layout__boxHeader">
-                            <div class="layout__boxTitle">
-                                <a href="{{request.META.HTTP_REFERER}}">
-                                   Back
-                                </a>
-                            </div>
-                            <h5>Edit your profile</h5>
-                        </div>
-                        <div class="form__group">
-                            <label for="" class="fm">Username:</label>
-                            {{ user_form.username }}
-                        </div>
-                        <p></p>
-                        <div class="form__group">
-                            <label for="" class="fm">Email:</label>
-                            {{ user_form.email }}
-                        </div>
-                        <div class="form__group">
-                            <p class="text-center">
-                                <a href="{% url 'password_change' %}" class="btn btn--main sl bg-white text-black"
-                                    style="width: max-content;">Change Password</a>
-                            </p>
-                            <hr>
-                            <label class="small mb-1">Change Avatar:</label>
-                            <p class="text-center">
-                                <img src="{{ resident.profile_photo.url }}" alt="" class="img-thumbnail">
-                            </p>
-                            {{ profile_form.profile_photo }}
+{% include 'res_nav.html' %}
+<div class="servicessx" style="max-width:35rem;">
+    <div class="container">
+        <div class="formdata">
+            {% if user_form.errors %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <div id="form_errors">
+                    {% for key, value in user_form.errors.items %}
+                    <strong>{{ value }}</strong>
+                    {% endfor %}
+                </div>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% endif %}
+            <form action="" method="post" class="fm ressxs">
+                {% csrf_token %}
+                <div class="dix">
+                    <div class="layout__boxHeader">
+                        <div class="layout__boxTitle">
+                            <a href="{{request.META.HTTP_REFERER}}">
+                                <i class="btn btn--dark text-decoration-none fa fa-backward" >Back</i>
+                            </a>
                         </div>
                     </div>
-                    <p class="text-center">
-                        <button type="submit" class="btn btn--main sl" style="width: max-content;">Save Changes</button>
-                        <button type="reset" class="btn btn--main sl" style="width: max-content;">Reset</button>
-                    </p>
-                </form>
-            </div>
+                    <div class="form__group">
+                        <label for="" class="fm">Username:</label>
+                        {{ user_form.username }}
+                    </div>
+                    <p></p>
+                    <div class="form__group">
+                        <label for="" class="fm">Email:</label>
+                        {{ user_form.email }}
+                    </div>
+                    <div class="form__group">
+                        <p class="text-center">
+                            <a href="{% url 'password_change' %}" class="btn btn--main sl bg-white text-black"
+                                style="width: max-content;">Change Password</a>
+                        </p>
+                        <hr>
+                        <label class="small mb-1">Change Avatar:</label>
+                        <p class="text-center">
+                            <img src="{{ resident.profile_photo.url }}" alt="" class="img-thumbnail">
+                        </p>
+                        {{ profile_form.profile_photo }}
+                    </div>
+                </div>
+                <p class="text-center">
+                    <button type="submit" class="btn btn--main sl bg-white text-black" style="width: max-content;">Save Changes</button>
+                    <button type="reset" class="btn btn--main sl bg-white text-black" style="width: max-content;">Reset</button>
+                </p>
+            </form>
         </div>
     </div>
 </div>
+
 {% endblock content %}
