--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,6 +99,27 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+.servicessx{
+    position: absolute;
+    left: 25%;
+    z-index: 2;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.ressxs{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: 2px solid black;
+    border-radius: 4px;
+    padding: 2%;
+    box-shadow: 0px 0px 5px black;
+}
+
 .ssx{
     width: 100%;
     display: flex;
@@ -246,6 +267,12 @@
     flex-direction: column;
     margin-top: 3rem;
 }
+.formdata{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 .form__group {
     margin-bottom: 2rem;
     width: 100%;
@@ -269,6 +296,16 @@
     justify-content: center;
     text-align: center;
 }
+
+.p-gx{
+    display: flex;
+    padding: 2%;
+
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 .ressx{
     border-left: 5px solid black;
     border-right: 5px solid black;
