--- a/neighbourhoodx/templates/neighbourhoodx/edit_profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/edit_profile.html
@@ -50,6 +50,10 @@
                         </p>
                         {{ profile_form.profile_photo }}
                     </div>
+                    <div class="form__group">
+                        <label for="" class="fm">Bio:</label>
+                        {{ profile_form.bio }}
+                    </div>
                 </div>
                 <p class="text-center">
                     <button type="submit" class="btn btn--main sl bg-white text-black" style="width: max-content;">Save Changes</button>
