--- a/neighbourhoodx/templates/neighbourhoodx/profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/profile.html
@@ -107,13 +107,13 @@
                 <div class=" d-flex mt-2"> <a href="{% url 'edit-profile' profile.id %}">
                         <button class="btn1 btn-dark">Edit Profile</button></a>
                 </div>
-                <div class="text mt-3"> <span>{{profile.bio}}<br><br>@{{profile.username}}</span> </div>
-                <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i
+                <div class="text mt-2 text-center"> <span class="text-center">{{resident.bio}} <p></p> @{{profile.username}}</span> </div>
+                <div class="gap-3 mt-2 icons d-flex flex-row justify-content-center align-items-center"> <span><i
                             class="fa-brands fa-twitter"></i></span> <span><i
                             class="fa-brands fa-facebook-f"></i></span> <span><i
                             class="fa-brands fa-instagram"></i></span> <span><i
                             class="fa-brands fa-linkedin"></i></span> </div>
-                <div class=" px-2 rounded mt-4 mb-2 date "> <span class="join">Joined <strong>{{resident.joined | date}}</strong> </span> </div>
+                <div class=" px-2 rounded mt-3 mb-2 date "> <span class="join">Joined <strong>{{resident.joined | date}}</strong> </span> </div>
                 <a href="{% url 'home' %}" class=" btn btn--main "> User-Dashboard </a>
             </div>
         </div>
