--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -62,6 +62,9 @@
 <div class="container-fluid admin">
     <div class="admin-blank">
         <strong class="text-center">Welcome To Neighbourhood-X</strong>
+        <div class="text-center">
+            <p>any ww w w w w w w w w w w w w w</p>
+        </div>
     </div>
     <div class="admin-map">
         <p class="text-center p-txt">{{hood.name}} Hood</p>
