--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,6 +30,7 @@
     height: 60vh;
     width: 55%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: aqua;
