--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -62,8 +62,35 @@
 <div class="container-fluid admin">
     <div class="admin-blank">
         <strong class="text-center">Welcome To Neighbourhood-X</strong>
-        <div class="text-center">
-            <p>any ww w w w w w w w w w w w w w</p>
+        <div>
+            <p style="font-size: large; width: max-content;" class="bg-dark p-1">As an administrator, you get to:</p>
+            <ul class="text-white" style="text-align: left;">
+                <li style="font-size: small;">You can add residents to the neighbourhood map</li>
+                <li style="font-size: small;">You can add social services to the neighbourhood map</li>
+                <li style="font-size: small;">You can send alerts to the residents</li>
+            </ul>
+            <p style="font-size: large; width: max-content;" class="bg-dark p-1">Basic Map Instructions</p>
+            <ul style="text-align: left;">
+                <li style="font-size: small; list-style: upper-roman;" class="text-white">Click on a marker to get more
+                    details</li>
+                <li style="font-size: small; list-style: upper-roman;" class="text-white">Hover on the lines to see the
+                    distance from the headquarters to a given place in the neighbourhood </li>
+                <h5>MAP KEY</h5>
+                <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card"
+                        aria-hidden="true"></i> represents bank, <i class="fa fa-home" aria-hidden="true"></i>
+                    represents Headquarters,
+                    <br>
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i> represents Business, <i
+                        class="fa fa-user" aria-hidden="true"></i> represents Resident,
+                        <br>
+                        <i class="fa fa-flag"
+                        aria-hidden="true"></i> represents Police Post, <i class="fa fa-book" aria-hidden="true"></i>
+                    represents School, 
+                    <br>
+                    <i class="fa fa-heart" aria-hidden="true"></i> represents Hospital.
+
+                </li>
+            </ul>
         </div>
     </div>
     <div class="admin-map">
@@ -92,5 +119,5 @@
 <br>
 {% endif %}
 
-<!-- {{hood.occupants}} -->
+<!-- {{hood.occupants}} -represents
 {% endblock content %}
