--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -76,18 +76,18 @@
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Hover on the lines to see the
                     distance from the headquarters to a given place in the neighbourhood </li>
                 <h5>MAP KEY</h5>
-                <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card"
-                        aria-hidden="true"></i> represents bank, <i class="fa fa-home" aria-hidden="true"></i>
+                <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card pq"
+                        aria-hidden="true"></i> represents bank, <i class="fa fa-home pq" aria-hidden="true"></i>
                     represents Headquarters,
                     <br>
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i> represents Business, <i
-                        class="fa fa-user" aria-hidden="true"></i> represents Resident,
-                        <br>
-                        <i class="fa fa-flag"
-                        aria-hidden="true"></i> represents Police Post, <i class="fa fa-book" aria-hidden="true"></i>
-                    represents School, 
+                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents Business, <i
+                        class="fa fa-user pq" aria-hidden="true"></i> represents Resident,
                     <br>
-                    <i class="fa fa-heart" aria-hidden="true"></i> represents Hospital.
+                    <i class="fa fa-flag pq" aria-hidden="true"></i> represents Police Post, <i class="fa fa-book pq"
+                        aria-hidden="true"></i>
+                    represents School,
+                    <br>
+                    <i class="fa fa-heart pq" aria-hidden="true"></i> represents Hospital.
 
                 </li>
             </ul>
