--- a/templates/res_nav.html
+++ b/templates/res_nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid navbar-x">
-        <a class="navbar-brand" href="{% url 'residentDashboard' %}"><strong>Occupant: {{request.user.username | upper}} </strong></a>
+        <a class="navbar-brand" href="{% url 'residentDashboard' %}"><strong>Occupant: {{request.user.username | upper}}
+            </strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,13 +9,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-tr">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="resident name . . ." name="q"aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="resident name . . ." name="q"
+                        aria-label="Search">
                     <button class="btn btn--dark" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'business' %}">add business</a>
                 </li>
-                <li class="nav-item"> 
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'resident-post' %}">Create Post</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -31,11 +33,9 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'view-other-residents' %}">view Residents</a></li>
                         <li><a class="dropdown-item" href="{% url 'profile' request.user.id %}">profile</a></li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                    </ul>
+                        <hr class="dropdown-divider">
                 </li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
             </ul>
         </div>
     </div>
