--- a/templates/admin_nav.html
+++ b/templates/admin_nav.html
@@ -9,43 +9,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-tr">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="resident name . . ." aria-label="Search" name="q">
+                    <input class="form-control me-2" type="search" placeholder="resident name . . ." name="q"
+                        aria-label="Search">
                     <button class="btn btn--dark" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'add-resident' %}">Add Resident</a>
+                    <a class="nav-link" href="{% url 'add-resident' %}">Add Resident</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'social-services' %}">Add Social Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'post' %}">Create Post</a>
+                    <a class="nav-link" href="{% url 'post' %}">Alert</a>
                 </li>
-                <li class="nav-item dropdown">                        
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        {% if request.user.administrator.profile_photo %}
-                        <img src=" {{ request.user.administrator.profile_photo.url}}" class="rounded-circle z-depth-0" style="max-width:100%;
-                            max-height:100%;">
-                        {% else %}
-                        <i class="fa fa-user-circle"></i>
-                        {%endif%}
-                        More Options
-                    </a>
-                    <ul class="dropdown-menu mr-3" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'view-residents' %}">view Residents</a></li>
-                        <li><a class="dropdown-item" href="{% url 'adjust' %}">Adjust Neighbourhood</a></li>
-
-                        {% if hood %}
-                        <li><a class="dropdown-item" href="{% url 'delete-neighbourhood' hood.id %}">Delete
-                                Neighbourhood</a></li>
-                        {% else %}
-                        {% endif %}
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'view-residents' %}">Residents</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'adjust' %}">Adjust</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
             </ul>
         </div>
