--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -65,7 +65,7 @@
         <div>
             <p style="font-size: large; width: max-content;" class="bg-dark p-1">As an administrator, you get to:</p>
             <ul class="text-white" style="text-align: left;">
-                <li style="font-size: small;">You can add residents to the neighbourhood map</li>
+                <li style="font-size: small;">You can add residents to the neighbourhood map(click to get latitude and longitude first and add respectively)</li>
                 <li style="font-size: small;">You can add social services to the neighbourhood map</li>
                 <li style="font-size: small;">You can send alerts to the residents</li>
             </ul>
