--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>NeighbourhoodX</title>
-    <link rel="icon" href="https://assets.awwwards.com/assets/images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="{% static 'images/default.jpg' %}"/>
 
 
     {% block style %}
