post card style

--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -108,7 +108,7 @@
             <div class="card text-white bg-black mb-4 p-1" style="max-width: 15rem; max-height: 9rem; font-size: small;">
                 <div class="card-header">{{post.posted | timesince}}</div>
                 <div class="card-body">
-                    <h5 class="card-title card post-card">{{post.body}}</h5>
+                    <h5 class="card-title card post-card" style="font-size: small;">{{post.body}}</h5>
                     <p class="card-text">By: {{post.poster}}</p>
                 </div>
             </div>
