post card style

--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -77,17 +77,17 @@
                     distance from the headquarters to a given place in the neighbourhood </li>
                 <h5>MAP KEY</h5>
                 <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card pq"
-                        aria-hidden="true"></i> represents bank, <i class="fa fa-home pq" aria-hidden="true"></i>
-                    represents Headquarters,
+                        aria-hidden="true"></i> represents a bank, <i class="fa fa-home pq" aria-hidden="true"></i>
+                    represents the Headquarters,
                     <br>
-                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents Business, <i
-                        class="fa fa-user pq" aria-hidden="true"></i> represents Resident,
+                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents a Business, <i
+                        class="fa fa-user pq" aria-hidden="true"></i> represents a Resident,
                     <br>
-                    <i class="fa fa-flag pq" aria-hidden="true"></i> represents Police Post, <i class="fa fa-book pq"
+                    <i class="fa fa-flag pq" aria-hidden="true"></i> represents a Police Post, <i class="fa fa-book pq"
                         aria-hidden="true"></i>
-                    represents School,
+                    represents a School,
                     <br>
-                    <i class="fa fa-heart pq" aria-hidden="true"></i> represents Hospital.
+                    <i class="fa fa-heart pq" aria-hidden="true"></i> represents a Hospital.
 
                 </li>
             </ul>
