--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -75,21 +75,21 @@
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Click on a marker to get more
                     details</li>
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Hover on the lines to see the
-                    distance from the headquarters to a given place in the neighbourhood </li>
+                    distance from your home to a given place in the neighbourhood </li>
                 <h5>MAP KEY</h5>
                 <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card pq"
-                        aria-hidden="true"></i> represents bank, <i class="fa fa-home pq" aria-hidden="true"></i>
-                    represents Headquarters,
+                        aria-hidden="true"></i> represents a bank, <i class="fa fa-home pq" aria-hidden="true"></i>
+                    represents the Headquarters,
                     <br>
-                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents Business, <i class="fa fa-user pq"
+                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents a Business, <i class="fa fa-user pq"
                         aria-hidden="true"></i> represents Resident,
                     <br>
-                    <i class="fa fa-flag pq" aria-hidden="true"></i> represents Police Post, <i class="fa fa-book pq"
+                    <i class="fa fa-flag pq" aria-hidden="true"></i> represents a Police Post, <i class="fa fa-book pq"
                         aria-hidden="true"></i>
-                    represents School,
+                    represents a School,
                     <br>
-                    <i class="fa fa-heart pq" aria-hidden="true"></i> represents Hospital.
-                    <i class="fa fa-map-pin pq" aria-hidden="true"></i> represents your location
+                    <i class="fa fa-heart pq" aria-hidden="true"></i> represents a Hospital.
+                    <i class="fa fa-map-pin pq" aria-hidden="true"></i> represents your Home.
 
                 </li>
             </ul>
@@ -110,7 +110,7 @@
             <div class="card text-white bg-black mb-4" style="max-width: 15rem; max-height: 9rem;">
                 <div class="card-header">{{post.posted | timesince}}</div>
                 <div class="card-body">
-                    <h5 class="card-title card post-card">{{post.body}}</h5>
+                    <h5 class="card-title card post-card" style="font-size: small;">{{post.body}}</h5>
                     <p class="card-text">By: {{post.poster}}</p>
                 </div>
             </div>
