--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -65,7 +65,10 @@
         <div>
             <p style="font-size: large; width: max-content;" class="bg-dark p-1">As an administrator, you get to:</p>
             <ul class="text-white" style="text-align: left;">
-                <li style="font-size: small;">You can add residents to the neighbourhood map(click to get latitude and longitude first and add respectively)</li>
+                <li style="font-size: small;">You can add residents to the neighbourhood map(click to get latitude and
+                    longitude first and add resident's home location accordingly) - The login credentials will be
+                    <strong class="bg-white p-1 text-redx">auto</strong>-generated and sent to the added resident
+                    through the <strong class="bg-white p-1 text-redx">Email</strong> entered</li>
                 <li style="font-size: small;">You can add social services to the neighbourhood map</li>
                 <li style="font-size: small;">You can send alerts to the residents</li>
             </ul>
@@ -105,7 +108,8 @@
     <div class="row">
         {% for post in posts %}
         <div class="col-md-3">
-            <div class="card text-white bg-black mb-4 p-1" style="max-width: 15rem; max-height: 9rem; font-size: small;">
+            <div class="card text-white bg-black mb-4 p-1"
+                style="max-width: 15rem; max-height: 9rem; font-size: small;">
                 <div class="card-header">{{post.posted | timesince}} ago</div>
                 <div class="card-body">
                     <h5 class="card-title card post-card" style="font-size: small;">{{post.body}}</h5>
