--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,6 +26,10 @@
     justify-content: space-between;
 }
 
+.text-redx{
+    color: red;
+    font-weight: 900;
+}
 .admin-blank {
     height: 60vh;
     width: 55%;
