--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -75,14 +75,15 @@
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Click on a marker to get more
                     details</li>
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Hover on the lines to see the
-                    distance from your <strong class="bg-white p-1 text-redx">home</strong> to a given place in the neighbourhood </li>
+                    distance from your <strong class="bg-white p-1 text-redx">home</strong> to a given place in the
+                    neighbourhood </li>
                 <h5>MAP KEY</h5>
                 <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card pq"
                         aria-hidden="true"></i> represents a bank, <i class="fa fa-home pq" aria-hidden="true"></i>
                     represents the Headquarters,
                     <br>
-                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents a Business, <i class="fa fa-user pq"
-                        aria-hidden="true"></i> represents Resident,
+                    <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents a Business, <i
+                        class="fa fa-user pq" aria-hidden="true"></i> represents Resident,
                     <br>
                     <i class="fa fa-flag pq" aria-hidden="true"></i> represents a Police Post, <i class="fa fa-book pq"
                         aria-hidden="true"></i>
@@ -107,8 +108,24 @@
     <div class="row">
         {% for post in posts %}
         <div class="col-md-3">
+            <style>
+                .card-header {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                }
+            </style>
             <div class="card text-white bg-black mb-4" style="max-width: 15rem; max-height: 9rem;">
-                <div class="card-header">{{post.posted | timesince}}</div>
+                <div class="card-header">
+                    <div class="">{{post.posted | timesince}}</div>
+                    <div class="">
+                        {% if request.user == post.poster %}
+                        <span>
+                            <a href="{% url 'delete-post' post.id %}"><i class="fa fa-times f-right text-white"></i></a>
+                        </span>
+                        {% endif %}
+                    </div>
+                </div>
                 <div class="card-body">
                     <h5 class="card-title card post-card" style="font-size: small;">{{post.body}}</h5>
                     <p class="card-text">By: {{post.poster}}</p>
